--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <title>Symptom Checker</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <h1>Welcome to Symptom Checker</h1>
     <button id="startButton">Start Checking</button>
-    <script src="script.js"></script>
+
+    <div id="aboutProject">
+        This project was created for Kennesaw State University's Software Systems Requirements class (SWE 3623) by Demarcus Hollman, Alex Millsaps, Noah Enyart, and Joseph Thompson.
+    </div>
 </body>
 </html>
