--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div id="aboutProject">
         <p>
-            This project was created for Kennesaw State University's Software Systems Requirements class (SWE 3623) by Demarcus Hollman, Alex Millsaps, Noah Enyart, and Joseph Thompson.
+            This project was created for Kennesaw State University's Software Systems Requirements class (SWE 3623 Section 01) by Demarcus Hollman, Alex Millsaps, Noah Enyart, and Joseph Thompson.
         </p>
     </div>
 </body>
