Integrates with Mongodb
Ads test button to index.html and supporting javascript testButtonClicked()

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>Welcome to Symptom Checker</h1>
     <button id="startButton">Start Checking</button>
 
+    <button id="testButton">Test</button>
+
     <div id="aboutProject">
         <p>
             This project was created for Kennesaw State University's Software Systems Requirements class (SWE 3623 Section 01) by Demarcus Hollman, Alex Millsaps, Noah Enyart, and Joseph Thompson.
