Ads terms.html and integrates endlessmedicalapi

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h1>Welcome to Symptom Checker</h1>
     <button id="startButton">Start Checking</button>
 
-    <button id="testButton">Test</button>
+    <button id="testMongoButton">Test MongoDb Connection</button>
+    <button id="testEndlessMedicalButton">Test EndlessMedicalApi</button>
 
     <div id="aboutProject">
         <p>
